--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -34,18 +34,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:12<00:00, 27.63it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:17<00:00, 19.94it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(66,1,bdd)"
+    "p = Paciente(69,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,30 +84,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>161.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>1.794436</td>\n",
-       "      <td>119.740559</td>\n",
-       "      <td>119.740559</td>\n",
-       "      <td>1081.956908</td>\n",
-       "      <td>1081.956908</td>\n",
-       "      <td>66.728805</td>\n",
-       "      <td>105.38158</td>\n",
-       "      <td>62.07635</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1.884292</td>\n",
+       "      <td>98.918857</td>\n",
+       "      <td>64.314649</td>\n",
+       "      <td>900.105508</td>\n",
+       "      <td>2075.348045</td>\n",
+       "      <td>52.496571</td>\n",
+       "      <td>77.934877</td>\n",
+       "      <td>47.984963</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
-       "0   161.0    72.0  1.794436    119.740559  119.740559  1081.956908  \\\n",
+       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   166.0    77.0  1.884292     98.918857  64.314649   900.105508  \\\n",
        "\n",
        "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0     1081.956908  66.728805  105.38158   62.07635  "
+       "0     2075.348045  52.496571  77.934877  47.984963  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  "
+    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69"
    ]
   },
   {
@@ -179,7 +179,13 @@
     "Damaged files\n",
     "\n",
     "CT Error: \n",
-    "['DICOM_070.dcm', 'DICOM_071.dcm', 'DICOM_072.dcm', 'DICOM_073.dcm', 'DICOM_074.dcm', 'DICOM_075.dcm', 'DICOM_076.dcm', 'DICOM_077.dcm', 'DICOM_078.dcm', 'DICOM_079.dcm', 'DICOM_080.dcm', 'DICOM_081.dcm', 'DICOM_082.dcm', 'DICOM_083.dcm', 'DICOM_084.dcm', 'DICOM_085.dcm', 'DICOM_086.dcm', 'DICOM_087.dcm', 'DICOM_088.dcm', 'DICOM_089.dcm', 'DICOM_090.dcm', 'DICOM_091.dcm', 'DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_103.dcm']"
+    "['DICOM_070.dcm', 'DICOM_071.dcm', 'DICOM_072.dcm', 'DICOM_073.dcm', 'DICOM_074.dcm', 'DICOM_075.dcm', 'DICOM_076.dcm', 'DICOM_077.dcm', 'DICOM_078.dcm', 'DICOM_079.dcm', 'DICOM_080.dcm', 'DICOM_081.dcm', 'DICOM_082.dcm', 'DICOM_083.dcm', 'DICOM_084.dcm', 'DICOM_085.dcm', 'DICOM_086.dcm', 'DICOM_087.dcm', 'DICOM_088.dcm', 'DICOM_089.dcm', 'DICOM_090.dcm', 'DICOM_091.dcm', 'DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_103.dcm']\n",
+    "\n",
+    "**67**\n",
+    "Damaged files\n",
+    "\n",
+    "CT Error: \n",
+    "['DICOM_323.dcm', 'DICOM_324.dcm', 'DICOM_325.dcm', 'DICOM_326.dcm', 'DICOM_327.dcm', 'DICOM_328.dcm', 'DICOM_329.dcm', 'DICOM_330.dcm', 'DICOM_331.dcm', 'DICOM_332.dcm', 'DICOM_333.dcm', 'DICOM_334.dcm']"
    ]
   },
   {
