--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -34,18 +34,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:18<00:00, 18.49it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 583/583 [00:13<00:00, 44.05it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(73,1,bdd)"
+    "p = Paciente(79,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -84,30 +84,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>156.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>1.907878</td>\n",
-       "      <td>83.952091</td>\n",
-       "      <td>78.596934</td>\n",
-       "      <td>2251.269948</td>\n",
-       "      <td>3267.583017</td>\n",
-       "      <td>44.002852</td>\n",
-       "      <td>73.205156</td>\n",
-       "      <td>41.739843</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1.7831</td>\n",
+       "      <td>127.659362</td>\n",
+       "      <td>94.747566</td>\n",
+       "      <td>971.776641</td>\n",
+       "      <td>2547.138326</td>\n",
+       "      <td>71.59407</td>\n",
+       "      <td>107.237393</td>\n",
+       "      <td>66.205219</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   156.0    84.0  1.907878     83.952091  78.596934  2251.269948  \\\n",
+       "   Height  Weight     BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   194.0    59.0  1.7831    127.659362  94.747566   971.776641  \\\n",
        "\n",
-       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0     3267.583017  44.002852  73.205156  41.739843  "
+       "   Spread_patient  SDmax_euc   SDmax_man  SDmax_che  \n",
+       "0     2547.138326   71.59407  107.237393  66.205219  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73"
+    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79"
    ]
   },
   {
@@ -201,7 +201,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "28 34 47 49"
+    "Probar con otro ROI SUVmax, calcula la mascara pero las distancias son = 0"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "28 34 47 49 74 75"
    ]
   },
   {
