--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -34,18 +34,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 583/583 [00:13<00:00, 44.05it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:13<00:00, 26.47it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(79,1,bdd)"
+    "p = Paciente(83,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -84,30 +84,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>194.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>1.7831</td>\n",
-       "      <td>127.659362</td>\n",
-       "      <td>94.747566</td>\n",
-       "      <td>971.776641</td>\n",
-       "      <td>2547.138326</td>\n",
-       "      <td>71.59407</td>\n",
-       "      <td>107.237393</td>\n",
-       "      <td>66.205219</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>1.697547</td>\n",
+       "      <td>59.619342</td>\n",
+       "      <td>44.122284</td>\n",
+       "      <td>130.699048</td>\n",
+       "      <td>403.264561</td>\n",
+       "      <td>35.120873</td>\n",
+       "      <td>42.804811</td>\n",
+       "      <td>34.838835</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight     BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   194.0    59.0  1.7831    127.659362  94.747566   971.776641  \\\n",
+       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   133.0    78.0  1.697547     59.619342  44.122284   130.699048  \\\n",
        "\n",
-       "   Spread_patient  SDmax_euc   SDmax_man  SDmax_che  \n",
-       "0     2547.138326   71.59407  107.237393  66.205219  "
+       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
+       "0      403.264561  35.120873  42.804811  34.838835  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79"
+    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83"
    ]
   },
   {
@@ -173,19 +173,25 @@
     "CT Error: \n",
     "['DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm']\n",
     "\n",
-    "**61**\n",
+    "**61**<br>\n",
     "\n",
-    "**65**\n",
+    "**65**<br>\n",
     "Damaged files\n",
     "\n",
     "CT Error: \n",
     "['DICOM_070.dcm', 'DICOM_071.dcm', 'DICOM_072.dcm', 'DICOM_073.dcm', 'DICOM_074.dcm', 'DICOM_075.dcm', 'DICOM_076.dcm', 'DICOM_077.dcm', 'DICOM_078.dcm', 'DICOM_079.dcm', 'DICOM_080.dcm', 'DICOM_081.dcm', 'DICOM_082.dcm', 'DICOM_083.dcm', 'DICOM_084.dcm', 'DICOM_085.dcm', 'DICOM_086.dcm', 'DICOM_087.dcm', 'DICOM_088.dcm', 'DICOM_089.dcm', 'DICOM_090.dcm', 'DICOM_091.dcm', 'DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_103.dcm']\n",
     "\n",
-    "**67**\n",
+    "**67**<br>\n",
     "Damaged files\n",
     "\n",
     "CT Error: \n",
-    "['DICOM_323.dcm', 'DICOM_324.dcm', 'DICOM_325.dcm', 'DICOM_326.dcm', 'DICOM_327.dcm', 'DICOM_328.dcm', 'DICOM_329.dcm', 'DICOM_330.dcm', 'DICOM_331.dcm', 'DICOM_332.dcm', 'DICOM_333.dcm', 'DICOM_334.dcm']"
+    "['DICOM_323.dcm', 'DICOM_324.dcm', 'DICOM_325.dcm', 'DICOM_326.dcm', 'DICOM_327.dcm', 'DICOM_328.dcm', 'DICOM_329.dcm', 'DICOM_330.dcm', 'DICOM_331.dcm', 'DICOM_332.dcm', 'DICOM_333.dcm', 'DICOM_334.dcm']\n",
+    "\n",
+    "**82**<br>\n",
+    "Damaged files\n",
+    "\n",
+    "PET Error: \n",
+    "['DICOM_029.dcm', 'DICOM_030.dcm', 'DICOM_031.dcm', 'DICOM_032.dcm', 'DICOM_043.dcm', 'DICOM_044.dcm', 'DICOM_052.dcm']"
    ]
   },
   {
@@ -209,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "28 34 47 49 74 75"
+    "28 34 47 49 74 75 80"
    ]
   },
   {
