--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -20,32 +20,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No damaged files\n"
+      "Damaged files\n",
+      "\n",
+      "PET Error: \n",
+      "['DICOM_083.dcm', 'DICOM_085.dcm', 'DICOM_091.dcm', 'DICOM_093.dcm', 'DICOM_095.dcm', 'DICOM_102.dcm']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:13<00:00, 26.47it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [01:20<00:00,  4.34it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(83,1,bdd)"
+    "p = Paciente(85,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -84,16 +87,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>133.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>1.697547</td>\n",
-       "      <td>59.619342</td>\n",
-       "      <td>44.122284</td>\n",
-       "      <td>130.699048</td>\n",
-       "      <td>403.264561</td>\n",
-       "      <td>35.120873</td>\n",
-       "      <td>42.804811</td>\n",
-       "      <td>34.838835</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>2.103965</td>\n",
+       "      <td>125.658226</td>\n",
+       "      <td>91.987963</td>\n",
+       "      <td>4831.709795</td>\n",
+       "      <td>8361.950614</td>\n",
+       "      <td>59.724499</td>\n",
+       "      <td>93.660791</td>\n",
+       "      <td>56.196437</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -101,13 +104,13 @@
       ],
       "text/plain": [
        "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   133.0    78.0  1.697547     59.619342  44.122284   130.699048  \\\n",
+       "0   166.0    96.0  2.103965    125.658226  91.987963  4831.709795  \\\n",
        "\n",
        "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0      403.264561  35.120873  42.804811  34.838835  "
+       "0     8361.950614  59.724499  93.660791  56.196437  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83"
+    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83  84(Da file damage pero saca distancias  )"
    ]
   },
   {
@@ -191,7 +194,13 @@
     "Damaged files\n",
     "\n",
     "PET Error: \n",
-    "['DICOM_029.dcm', 'DICOM_030.dcm', 'DICOM_031.dcm', 'DICOM_032.dcm', 'DICOM_043.dcm', 'DICOM_044.dcm', 'DICOM_052.dcm']"
+    "['DICOM_029.dcm', 'DICOM_030.dcm', 'DICOM_031.dcm', 'DICOM_032.dcm', 'DICOM_043.dcm', 'DICOM_044.dcm', 'DICOM_052.dcm']\n",
+    "\n",
+    "**84**<br>\n",
+    "Damaged files\n",
+    "\n",
+    "PET Error: \n",
+    "['DICOM_083.dcm', 'DICOM_085.dcm', 'DICOM_091.dcm', 'DICOM_093.dcm', 'DICOM_095.dcm', 'DICOM_102.dcm']"
    ]
   },
   {
