Hecha toda la lista

--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -20,35 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Damaged files\n",
-      "\n",
-      "PET Error: \n",
-      "['DICOM_083.dcm', 'DICOM_085.dcm', 'DICOM_091.dcm', 'DICOM_093.dcm', 'DICOM_095.dcm', 'DICOM_102.dcm']\n"
+      "No damaged files\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [01:20<00:00,  4.34it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 254/254 [00:09<00:00, 27.85it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(85,1,bdd)"
+    "p = Paciente(16,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -87,44 +84,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>166.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>2.103965</td>\n",
-       "      <td>125.658226</td>\n",
-       "      <td>91.987963</td>\n",
-       "      <td>4831.709795</td>\n",
-       "      <td>8361.950614</td>\n",
-       "      <td>59.724499</td>\n",
-       "      <td>93.660791</td>\n",
-       "      <td>56.196437</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1.841874</td>\n",
+       "      <td>264.870297</td>\n",
+       "      <td>195.608393</td>\n",
+       "      <td>4040.427922</td>\n",
+       "      <td>10758.302451</td>\n",
+       "      <td>143.804783</td>\n",
+       "      <td>211.649564</td>\n",
+       "      <td>111.307882</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   166.0    96.0  2.103965    125.658226  91.987963  4831.709795  \\\n",
+       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
+       "0   207.0    59.0  1.841874    264.870297  195.608393  4040.427922  \\\n",
        "\n",
-       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0     8361.950614  59.724499  93.660791  56.196437  "
+       "   Spread_patient   SDmax_euc   SDmax_man   SDmax_che  \n",
+       "0    10758.302451  143.804783  211.649564  111.307882  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p.calcularParametrosDistancia()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "16 20 23 24 25 28 34 36 38 42 44 46 47 48 49 50 52 53 55 56 59 61 62 63 65 66 67 69 72 73 74 75 79 80 82 83 84 85 88"
    ]
   },
   {
@@ -140,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83  84(Da file damage pero saca distancias  )"
+    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83  84(Da file damage pero saca distancias)"
    ]
   },
   {
@@ -200,7 +189,11 @@
     "Damaged files\n",
     "\n",
     "PET Error: \n",
-    "['DICOM_083.dcm', 'DICOM_085.dcm', 'DICOM_091.dcm', 'DICOM_093.dcm', 'DICOM_095.dcm', 'DICOM_102.dcm']"
+    "['DICOM_083.dcm', 'DICOM_085.dcm', 'DICOM_091.dcm', 'DICOM_093.dcm', 'DICOM_095.dcm', 'DICOM_102.dcm']\n",
+    "\n",
+    "**85**\n",
+    "\n",
+    "**88**"
    ]
   },
   {
