Solucionados RTSTRUCT añadido 38

--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,76 +78,81 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>38</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>44</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>46</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>52</td>\n",
        "      <td>19.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>55</td>\n",
        "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>56</td>\n",
        "      <td>51.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>59</td>\n",
        "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>12</th>\n",
        "      <td>62</td>\n",
        "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "      <td>63</td>\n",
        "      <td>46.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>14</th>\n",
        "      <td>66</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>15</th>\n",
        "      <td>69</td>\n",
        "      <td>26.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>16</th>\n",
        "      <td>72</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>17</th>\n",
        "      <td>73</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>18</th>\n",
        "      <td>79</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>19</th>\n",
        "      <td>83</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>20</th>\n",
        "      <td>84</td>\n",
        "      <td>41.0</td>\n",
        "    </tr>\n",
@@ -162,24 +167,25 @@
        "2         23                 24.0\n",
        "3         24                101.0\n",
        "4         36                 27.0\n",
-       "5         44                 11.0\n",
-       "6         46                  1.0\n",
-       "7         52                 19.0\n",
-       "8         55                 21.0\n",
-       "9         56                 51.0\n",
-       "10        59                 14.0\n",
-       "11        62                 28.0\n",
-       "12        63                 46.0\n",
-       "13        66                 11.0\n",
-       "14        69                 26.0\n",
-       "15        72                  7.0\n",
-       "16        73                  1.0\n",
-       "17        79                 11.0\n",
-       "18        83                  5.0\n",
-       "19        84                 41.0"
+       "5         38                  3.0\n",
+       "6         44                 11.0\n",
+       "7         46                  1.0\n",
+       "8         52                 19.0\n",
+       "9         55                 21.0\n",
+       "10        56                 51.0\n",
+       "11        59                 14.0\n",
+       "12        62                 28.0\n",
+       "13        63                 46.0\n",
+       "14        66                 11.0\n",
+       "15        69                 26.0\n",
+       "16        72                  7.0\n",
+       "17        73                  1.0\n",
+       "18        79                 11.0\n",
+       "19        83                  5.0\n",
+       "20        84                 41.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  62  63  66  69  72  73  79  83  84(Da file damage pero saca distancias)"
+    "16  20  23  24  36  38  44  46  52  55  56  59  62  63  66  69  72  73  79  83  84(Da file damage pero saca distancias)"
    ]
   },
   {
@@ -1428,7 +1434,11 @@
     "\n",
     "**85**\n",
     "\n",
-    "**88**"
+    "**88**\n",
+    "\n",
+    "**42**\n",
+    "\n",
+    "**53**"
    ]
   },
   {
@@ -1453,22 +1463,6 @@
    "metadata": {},
    "source": [
     "28 34 47 49 74 75 80"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### No tiene RTSTRUCT"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "38 42 53"
    ]
   }
  ],
